# engram

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  engram.rb  install.sh  release.sh
.claude/: settings.json
.claude/agents/: engram-worker.md
.claude/rules/: adr-format.md  agent-demo-gate.md  fractional-index.md  mcp-tool-shape.md  release-notes-mandate.md  schema-evolution.md  sqlx-pattern.md  testing-strategy.md
.github/workflows/: release.yml
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: lib.rs  main.rs  output.rs
crates/engram-cli/src/commands/: blocked.rs  board.rs  epic.rs  history.rs  hook.rs  issue.rs  mission.rs  mod.rs  note.rs  retro.rs  retrospective.rs  session.rs  sprint.rs  stalled.rs  task.rs
crates/engram-cli/tests/: parity_test.rs
crates/engram-core/: Cargo.toml
crates/engram-core/migrations/: 0001_init.sql  0002_epic_sprint_nullable.sql  0003_issue_sprint.sql  0004_note_comment_type.sql  0006_notes_agent_id.sql  (+10 more)
crates/engram-desktop/: Cargo.toml  tauri.conf.json
crates/engram-desktop/src/: commands.rs  main.rs  mcp_supervisor.rs  settings.rs  tracing_layer.rs  tray.rs  watcher.rs
crates/engram-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/engram-desktop/src-tauri/capabilities/: default.json
crates/engram-desktop/src-tauri/icons/: _gen.py  icon.icns
crates/engram-desktop/src-tauri/src/: commands.rs  main.rs  mcp_supervisor.rs  settings.rs  tray.rs  watcher.rs
crates/engram-desktop/src-tauri/src/commands/: epic.rs  issue.rs  mcp.rs  mission.rs  mod.rs  note.rs  retrospective.rs  session.rs  settings.rs  sprint.rs  task.rs
crates/engram-desktop/ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tray.html  vite.config.ts
crates/engram-desktop/ui/src/: App.tsx  index.css  tray.tsx
crates/engram-desktop/ui/src/assets/guides/: faq.json  intro.md  issue-management.md  mcp-integration.md  sprint-operation.md
crates/engram-desktop/ui/src/components/: BaseModal.tsx  BlockingGraph.tsx  BulkActionBar.tsx  BulkFinishConfirmModal.tsx  CommentSection.tsx  ConfirmBulkActionModal.tsx  ConfirmCompleteSprintModal.tsx  ConfirmDeleteRetroModal.tsx  CopyableId.tsx  CreateEpicModal.tsx  CreateIssueModal.tsx  CreateRetroModal.tsx  CreateSprintModal.tsx  EditEpicModal.tsx  EditSprintModal.tsx  EpicChip.tsx  EpicRow.tsx  FilterBar.tsx  GuideMarkdown.tsx  HistorySection.tsx  IssueCard.tsx  IssueFilterPanel.tsx  IssueLinkSection.tsx  IssueManagerModals.tsx  IssueSelectModal.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LexicalRetroEditor.tsx  Markdown.tsx  MissionHierarchy.tsx  MissionModal.tsx  NoteList.tsx  PriorityBadge.tsx  PromptButton.tsx  RetrospectiveDetail.tsx  Retrospectives.tsx  ScopeExpansionBanner.tsx  SlashMenuPlugin.tsx  SprintSidebar.tsx  StalledWorkingBanner.tsx  (+5 more)
crates/engram-desktop/ui/src/components/flow/: EpicNode.tsx  IssueNode.tsx  MissionNode.tsx
crates/engram-desktop/ui/src/hooks/: useBoardStatus.ts  useEpics.ts  useGroupedMissions.ts  useIssueDnd.ts  useIssues.ts  useMcpCalls.ts  useMcpLogs.ts  useMcpStatus.ts  useMcpTools.ts  useSessionRestore.ts  useSprints.ts
crates/engram-desktop/ui/src/ipc/: invoke.ts  types.ts
crates/engram-desktop/ui/src/routes/: EpicDetail.tsx  Guide.tsx  History.tsx  IssueDetail.tsx  IssueManager.tsx  McpManager.tsx  MissionDetail.tsx  MissionsBoard.tsx  Settings.tsx
crates/engram-desktop/ui/src/services/: sse_contract.ts  updateManager.ts
crates/engram-desktop/ui/src/store/: notification.ts  ui.ts
crates/engram-desktop/ui/src/test/: setup.ts
crates/engram-desktop/ui/src/utils/: bulkHelper.test.ts  bulkHelper.ts  date.ts  epicHelper.test.ts  epicHelper.ts  graph.ts  historyHelper.test.ts  historyHelper.ts  issueFilterHelper.test.ts  issueFilterHelper.ts  missionSummary.ts  sidebarHelper.test.ts  sidebarHelper.ts  sprintCompleteHelper.test.ts  sprintCompleteHelper.ts
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: http.rs  lib.rs  main.rs  server.rs  sse.rs
crates/engram-mcp/src/tools/: dispatch_test.rs  epic.rs  format.rs  history.rs  issue.rs  mission.rs  mod.rs  note.rs  retrospective.rs  session.rs  sprint.rs  task.rs  task_test.rs
docs/: agent-playbook.md  cli-mcp-parity.md  draft-postinstall-hook.sh  install.md  plugin-setup.md  token_saving_guide.md
docs/adr/: 0001-single-central-db.md  0002-sqlite-wal.md  0003-blocks-one-way.md  0004-hook-in-mvp.md  0005-fractional-ord.md  0006-desktop-tauri.md  0006-streamable-http-transport.md  0007-agent-demo-gate.md  0007-changed-by-actor-audit.md  0008-embedded-mcp-supervisor.md  0009-multi-agent-concurrency.md  0010-cli-mcp-parity.md  0011-cli-distribution.md  0012-mission-layer.md  0013-mission-sprint-ssot.md  0014-epic-sprint-ssot.md  0015-sse-single-source-contract.md  README.md
docs/plan/: README.md  m0-foundations.md  m1-scaffold-board.md  m2-dnd-drawer.md  m3-mcp-supervisor.md  m4-tray-notifications.md  m5-polish.md  m6-jira-mission.md  overview.md
docs/retro/: 2026-05-18-epic-4-cli-mcp-parity.md  2026-05-18-epic-5-cli-install-automation.md  README.md
docs/review/: 2026-05-25-agent-shortterm-memory-evaluation.md
tests/: verify_v0.1.0_download.sh
(+26 files in other folders)
