[package]
name = "engram-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
engram-core = { path = "../engram-core" }
engram-mcp  = { path = "../engram-mcp" }
tauri       = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification    = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
chrono  = { version = "0.4", features = ["serde"] }
toml    = "0.8"
socket2 = "0.5"
dirs    = "5"
