[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engram-core          = { path = "../engram-core" }
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
anyhow.workspace     = true
axum                 = { version = "0.7", features = ["macros"] }
tokio-stream         = "0.1"
async-stream         = "0.3"
