[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "engram_mcp"
path = "src/lib.rs"

[[bin]]
name = "engram-mcp"
path = "src/main.rs"

[dependencies]
engram-core          = { path = "../engram-core" }
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
anyhow.workspace     = true
axum                 = { version = "0.7", features = ["macros"] }
socket2              = { version = "0.5", features = ["all"] }
uuid                 = { version = "1", features = ["v4"] }
tokio-stream         = "0.1"
async-stream         = "0.3"
